fix issue where footer covered index page on smaller screens

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,15 +1,3 @@
-body {
-
-}
-
-
-footer {
-    position: fixed;
-    bottom:0;
-    width:100%;
-    height:40px;
-}
-
 .box {
   background: WhiteSmoke;
 }
